--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "zone.js": "^0.6.23",
     "angular2-in-memory-web-api": "0.0.20",
     "bootstrap": "^3.3.6",
-    "ng2-bootstrap": "1.1.3"
+    "ng2-bootstrap": "1.1.3",
+    "ng2-pagination": "0.4.1"
   },
   "devDependencies": {
     "concurrently": "^2.2.0",
