--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "jquery": "3.1.0",
     "bootstrap": "^3.3.6",
     "ng2-bootstrap": "1.1.3",
-    "ng2-pagination": "0.4.1"
+    "ng2-pagination": "0.4.1",
+    "ng2-uploader": "1.2.0"
   },
   "devDependencies": {
     "concurrently": "^2.2.0",
