--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cattrack-client",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Categorised spending tracker.",
   "repository": {
     "url": "https://github.com/dmkent/cattrack"
@@ -68,6 +68,7 @@
     "connect": "^3.4.1",
     "connect-history-api-fallback": "^1.3.0",
     "connect-livereload": "^0.5.4",
+    "conventional-github-releaser": "",
     "cssnano": "^3.7.3",
     "deep-extend": "^0.4.1",
     "doiuse": "^2.4.1",
@@ -76,13 +77,16 @@
     "express-history-api-fallback": "^2.0.0",
     "extend": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-bump": "",
     "gulp-cached": "^1.1.0",
     "gulp-clean-css": "^2.0.11",
     "gulp-concat": "^2.6.0",
     "gulp-concat-css": "^2.3.0",
+    "gulp-conventional-changelog": "",
     "gulp-filter": "^4.0.0",
     "gulp-inject": "^4.1.0",
     "gulp-inline-ng2-template": "^3.0.1",
+    "gulp-git": "",
     "gulp-load-plugins": "^1.2.4",
     "gulp-plumber": "~1.1.0",
     "gulp-postcss": "^6.1.1",
