--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   "author": "Minko Gechev <mgechev>",
   "license": "MIT",
   "devDependencies": {
-    "@angular/compiler-cli": "^0.6.1",
-    "@angular/platform-server": "^2.0.0",
+    "@angular/compiler-cli": "0.6.1",
+    "@angular/platform-server": "2.0.0",
     "@angular/tsc-wrapped": "^0.3.0",
     "@types/async": "^2.0.31",
     "@types/browser-sync": "^0.0.32",
@@ -134,14 +134,14 @@
     "yargs": "^4.8.0"
   },
   "dependencies": {
-    "@angular/common": "^2.0.0",
-    "@angular/compiler": "^2.0.0",
-    "@angular/core": "^2.0.0",
-    "@angular/forms": "^2.0.0",
-    "@angular/http": "^2.0.0",
-    "@angular/platform-browser": "^2.0.0",
-    "@angular/platform-browser-dynamic": "^2.0.0",
-    "@angular/router": "^3.0.0",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/router": "3.0.0",
     "@angular/upgrade": "2.0.0",
     "core-js": "^2.4.1",
     "es-module-loader": "^1.0.0",
@@ -151,7 +151,7 @@
     "zone.js": "0.6.23",
     "jquery": "3.1.0",
     "bootstrap": "^3.3.6",
-    "ng2-bootstrap": "1.1.3",
+    "ng2-bootstrap": "1.1.5",
     "ng2-pagination": "0.4.1",
     "ng2-uploader": "1.2.0"
   }
