--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "@angular/upgrade": "2.0.0",
     "core-js": "^2.4.1",
     "es-module-loader": "^1.0.0",
+    "moment": "^2.15.0",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.38",
