--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "connect": "^3.4.1",
     "connect-history-api-fallback": "^1.3.0",
     "connect-livereload": "^0.5.4",
-    "conventional-github-releaser": "",
+    "conventional-github-releaser": "^1.1.3",
     "cssnano": "^3.7.3",
     "deep-extend": "^0.4.1",
     "doiuse": "^2.4.1",
@@ -77,16 +77,17 @@
     "express-history-api-fallback": "^2.0.0",
     "extend": "^3.0.0",
     "gulp": "^3.9.1",
-    "gulp-bump": "",
+    "gulp-bump": "^2.4.0",
     "gulp-cached": "^1.1.0",
     "gulp-clean-css": "^2.0.11",
     "gulp-concat": "^2.6.0",
     "gulp-concat-css": "^2.3.0",
-    "gulp-conventional-changelog": "",
+    "gulp-conventional-changelog": "^1.1.0",
     "gulp-filter": "^4.0.0",
     "gulp-inject": "^4.1.0",
     "gulp-inline-ng2-template": "^3.0.1",
-    "gulp-git": "",
+    "gulp-git": "^1.11.3",
+    "gulp-gzip": "^1.4.0 ",
     "gulp-load-plugins": "^1.2.4",
     "gulp-plumber": "~1.1.0",
     "gulp-postcss": "^6.1.1",
@@ -97,6 +98,7 @@
     "gulp-sass-lint": "^1.2.0",
     "gulp-sourcemaps": "2.0.0-alpha",
     "gulp-template": "^4.0.0",
+    "gulp-tar": "^1.9.0",
     "gulp-tslint": "^6.0.1",
     "gulp-typescript": "^2.13.6",
     "gulp-uglify": "^2.0.0",
