--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "cattrack-client",
-  "version": "0.0.4",
+  "version": "0.0.3",
   "description": "Categorised spending tracker.",
   "repository": {
-    "url": "https://github.com/dmkent/cattrack"
+    "url": "https://github.com/dmkent/cattrack-client"
   },
   "scripts": {
     "build.dev": "gulp build.dev --color --config-env dev",
