Add prefix to release tags, set travis to build them

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,9 @@ after_failure:
 - cat /home/travis/build/mgechev/angular2-seed/npm-debug.log
 
 branches:
-  only: master
+  only:
+    - master
+    - /^release-.*$/
 
 notifications:
   email: true
@@ -53,3 +55,4 @@ deploy:
   on:
     repo: dmkent/cattrack-client
     tags: true
+    node_js: 5
