--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "gulp": "gulp",
     "karma": "karma",
     "karma.start": "karma start",
-    "postinstall": "gulp check.versions && npm prune && gulp webdriver",
+    "postinstall": "gulp check.versions && gulp build.bundle.rxjs && npm prune && gulp webdriver && gulp print.banner",
     "reinstall": "npm cache clean && npm install",
     "serve.coverage": "remap-istanbul -b src/ -i coverage/coverage-final.json -o coverage -t html && npm run gulp -- serve.coverage --color",
     "serve.dev": "gulp serve.dev --color --config-env dev",
     "serve.e2e": "gulp serve.e2e --color",
     "serve.prod": "gulp serve.prod --color --config-env prod",
     "start": "gulp serve.dev --color",
+    "start.deving": "gulp start.deving --color",
     "tasks.list": "gulp --tasks-simple --color",
     "test": "gulp test --color",
     "e2e.ci": "gulp build.prod --color && gulp build.js.e2e --color && gulp e2e --color",
@@ -100,7 +101,7 @@
     "gulp-template": "^4.0.0",
     "gulp-tar": "^1.9.0",
     "gulp-tslint": "^6.0.1",
-    "gulp-typescript": "^2.13.6",
+    "gulp-typescript": "^3.0.1",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.8",
@@ -113,6 +114,7 @@
     "karma-coverage": "^1.1.0",
     "karma-jasmine": "~1.0.2",
     "karma-mocha-reporter": "^2.0.4",
+    "karma-remap-istanbul": "^0.2.1",
     "merge-stream": "^1.0.0",
     "open": "0.0.5",
     "postcss-reporter": "^1.4.1",
@@ -125,6 +127,7 @@
     "slash": "~1.0.0",
     "stylelint": "^7.0.2",
     "stylelint-config-standard": "^11.0.0",
+    "supports-color": "^3.1.2",
     "systemjs-builder": "0.15.31",
     "tildify": "^1.2.0",
     "traceur": "^0.0.111",
